Refactoring Fix Spring security issues